nats/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nats
spec:
  rules:
  - http:
      paths:
      - path: /nats
        pathType: Exact
        backend:
          service:
            name: nats
            port: monitor
